--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 #wayOfWorking .mainWarper .static_content .text_content {
   width: 80%;
