--- a/style.scss
+++ b/style.scss
@@ -17,12 +17,12 @@
       display: flex;
       flex-direction: row;
       gap: 0;
-  
       .static_content {
         width: 50%;
         display: flex;
         align-items: center;
         justify-content: center;
+        overflow: hidden;
         .text_content{
             width: 80%;
             padding: 80px 40px;
