--- a/style.scss
+++ b/style.scss
@@ -1,291 +1,223 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
 
-  
-  #wayOfWorking {
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  z-index: -1;
+  pointer-events: none;
+}
+#wayOfWorking {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  background-color: #ffd900;
+
+  .mainWarper {
     width: 100%;
     height: 100%;
-    min-height: 100vh;
-    background-color: #ffd900;
-  
-    .mainWarper {
-      width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 0;
+    .static_content {
+      width: 50%;
       display: flex;
-      flex-direction: row;
-      gap: 0;
-      .static_content {
-        width: 50%;
+      align-items: center;
+      justify-content: center;
+      z-index: 1;
+      background-color: #ffd900;
+      .text_content {
+        width: 80%;
+        padding: 80px 40px;
+        h1 {
+          font-size: 6vw;
+          line-height: 0.8;
+          text-transform: uppercase;
+          margin-bottom: 30px;
+        }
+        p {
+          font-size: 18px;
+          margin-bottom: 40px;
+        }
+        .pro_button {
+          border: 1px solid black;
+          border-radius: 50px;
+          padding: 8px 20px;
+          font-size: 24px;
+          background-color: transparent;
+          transition: 0.2s all linear;
+          cursor: pointer;
+          .btn_arrow {
+            display: inline-block;
+            transform: rotate(-45deg);
+            transition: 0.3s all linear;
+          }
+          &:hover {
+            background-color: #000000;
+            border-color: transparent;
+            color: #ffd900;
+          }
+          &:hover .btn_arrow {
+            transform: translateY(5px) translateX(5px) rotate(0deg);
+          }
+        }
+      }
+    }
+
+    .dyanamic_component {
+      width: 50%;
+      height: 100%;
+      padding: 0;
+      position: fixed;
+      top: 0;
+      right: 0;
+      .bg-video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      .blackBox {
+        width: 100%;
+        padding: 0;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.63);
         display: flex;
         align-items: center;
         justify-content: center;
         overflow: hidden;
-        .text_content{
-            width: 80%;
-            padding: 80px 40px;
-            h1{
-                font-size: 6vw;
-                line-height: .8;
-                text-transform: uppercase;
-                margin-bottom: 30px;
-            }
-            p{
-                font-size: 18px;
-                margin-bottom: 40px;
-            }
-            .pro_button {
-              border: 1px solid black;
-              border-radius: 50px;
-              padding: 8px 20px;
-              font-size: 24px;
-              background-color: transparent;
-              transition: .2s all linear;
-              cursor: pointer;
-              .btn_arrow {
-                display: inline-block;
-                transform:  rotate(-45deg);
-                transition: .3s all linear;
-              }
-              &:hover{
-                background-color: #000000;
-                border-color:transparent ;
-                color: #ffd900;
-              }
-              &:hover .btn_arrow{transform: translateY(5px) translateX(5px) rotate(0deg);}
-            }
-
-        }
-      }
-  
-      .dyanamic_component {
-        width: 50%;
-        padding: 10px 10px 0 0;
-  
-        .blackBox {
-          width: 100%;
-          padding: 30px;
-          height: calc(100vh - 100px);
-          background-color: black;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          overflow: hidden;
-          .hexagon_container{
-            width: 570px;
+        .hexagon_container {
+          width: 570px;
+          position: relative;
+          background-color: transparent;
+          .outerText {
+            position: absolute;
+            color: #ffd900;
+            z-index: 9;
+            font-size: 24px;
+          }
+          .outer1 {
+            top: 53px;
+            right: 71px;
+            transform: rotate(30deg);
+          }
+          .outer2 {
+            top: 290px;
+            right: -73px;
+            transform: rotate(90deg);
+          }
+          .outer3 {
+            bottom: 52px;
+            right: 67px;
+            transform: rotate(-30deg);
+          }
+          .outer4 {
+            bottom: 10%;
+            left: 10%;
+            transform: rotate(30deg);
+          }
+          .outer5 {
+            top: 50%;
+            left: -17%;
+            transform: rotate(-90deg);
+          }
+          .outer6 {
+            top: 10%;
+            left: 14%;
+            transform: rotate(-30deg);
+          }
+          .hexagon_warper {
+            width: 563px;
+            height: calc(563px * 647 / 563);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            clip-path: polygon(
+              50% 0,
+              100% 25%,
+              100% 75%,
+              50% 100%,
+              0 75%,
+              0 25%
+            );
+            background: #ffd9003a;
+            background-image: conic-gradient(
+              #ffd900 0deg 1deg,
+              #000000 10deg 360deg
+            );
             position: relative;
-            background-color: transparent;
-            .outerText{
-                position: absolute;
-                color: #ffd900;
-                z-index: 9;
-                font-size: 24px;
-              }
-              .outer1 {
-                top: 53px;
-                right: 71px;
-                transform: rotate(30deg);
-              }
-              .outer2 {
-                top: 290px;
-                right: -73px;
-                transform: rotate(90deg);
-              }
-              .outer3 {
-                bottom: 52px;
-                right: 67px;
-                transform: rotate(-30deg);
-              }
-              .outer4 {
-                bottom: 10%;
-                left: 10%;
-                transform: rotate(30deg);
-              }
-              .outer5 {
-                top: 50%;
-                left: -17%;
-                transform: rotate(-90deg);
-              }
-              .outer6 {
-                top: 10%;
-                left: 14%;
-                transform: rotate(-30deg);
-              }
-            .hexagon_warper{
-              width: 563px;
-              height: calc(563px * 647 / 563);
+            z-index: 1;
+            padding: 2px;
+
+            .hexagon {
+              width: 100%;
+              height: 100%;
               display: flex;
               align-items: center;
               justify-content: center;
-              clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
-              background: #ffd9003b;
-              background-image: conic-gradient(#ffd900 0deg 1deg, #ffd90000 10deg 360deg);
+              clip-path: inherit;
+              background-color: #000000;
               position: relative;
+              overflow: hidden;
               z-index: 1;
-              padding: 2px;
-              
-              .hexagon{
+              .hexagon_overlay {
                 width: 100%;
                 height: 100%;
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                clip-path: inherit;
-                background-color: #131001;
-                position: relative;
-                overflow: hidden;
-                z-index: 1;
-                .mid_ball{
-                    width: 100px;
-                    height: 100px;
-                    border: 1px solid #ffd9003a;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    border-radius: 50%;
-                    background-color: #000000;
-                    background-image: conic-gradient(#ffd900 0deg 10deg, #ffd90000 10deg 360deg);
-                    position: relative;
-                    &::before{
-                        position: absolute;
-                        content: "";
-                        width: calc(100% - 2px);
-                        height: calc(100% - 2px);
-                        background-color: #000000;
-                        border-radius: 50%;
-                    }
-                    .middle{
-                        width: 20px;
-                        height: 20px;
-                        background-color: #ffd900;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        border-radius: 50%;
-                        position: relative;
-                        &::before{
-                            content: "";
-                            position: absolute;
-                            bottom: 45%;
-                            left: 5px;
-                            width: 0;
-                            height: 0;
-                            border-top: 400px solid transparent;
-                            border-left: 550px solid #ffd90071;
-                            border-bottom: 340px solid transparent;
-                            border-right: 92px solid transparent;
-                        }
-                        // &::after{
-                        //     content: '';
-                        //     position: absolute;
-                        //     top: -300px;
-                        //     left: 0;
-                        //     width: 0;
-                        //     height: 0;
-                        //     border-left: 400px solid transparent;
-                        //     border-right: 130px solid transparent;
-                        //     border-bottom: 307px solid #ffd90071;
-                        // }
-                    }
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-  
-@media only screen and (max-width: 600px){
-  #wayOfWorking {
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
-    background-color: #ffd900;
-  
-    .mainWarper {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      gap: 0;
-  
-      .static_content {
-        width: 100%;
-        order: 1;
-        .text_content{
-            width: 100%;
-            padding: 80px 40px;
-            h1{
-                font-size: 6vw;
-                line-height: 1;
-                text-transform: uppercase;
-                margin-bottom: 30px;
-            }
-            p{
-                font-size: 18px;
-            }
-        }
-      }
-  
-      .dyanamic_component {
-        width: 100%;
-        padding: 10px 10px 0 0;
-  
-        .blackBox {
-          width: 100%;
-          padding: 30px;
-          height: calc(100vh - 100px);
-          overflow: hidden;
-          .hexagon{
-            width: 363px;
-            height: calc(363px * 647 / 563);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
-            background-color: #ffd90028;
-            overflow: hidden;
-            .mid_ball{
-                width: 100px;
-                height: 100px;
-                border: 1px solid #ffd90060;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                border-radius: 50%;
-                background-color: #000000;
-                background-image: conic-gradient(#ffd900 0deg 10deg, #ffd90000 10deg 360deg);
-                position: relative;
-                &::before{
+                background-color: rgb(0, 0, 0);
+                opacity: 1;
+
+                .mid_ball {
+                  width: 100px;
+                  height: 100px;
+                  border: 1px solid #ffd9003a;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  border-radius: 50%;
+                  background-color: #000000;
+                  background-image: conic-gradient(
+                    #ffd900 0deg 10deg,
+                    #ffd90000 10deg 360deg
+                  );
+                  position: relative;
+                  &::before {
                     position: absolute;
                     content: "";
                     width: calc(100% - 2px);
                     height: calc(100% - 2px);
                     background-color: #000000;
                     border-radius: 50%;
-                }
-                .middle{
-                    width: 10px;
-                    height: 10px;
+                  }
+                  .middle {
+                    width: 20px;
+                    height: 20px;
                     background-color: #ffd900;
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     border-radius: 50%;
                     position: relative;
-                    &::before{
-                        content: "";
-                        position: absolute;
-                        bottom: 45%;
-                        left: 5px;
-                        width: 0;
-                        height: 0;
-                        border-top: 400px solid transparent;
-                        border-left: 550px solid #ffd90071;
-                        border-bottom: 340px solid transparent;
-                        border-right: 92px solid transparent;
+                    &::before {
+                      content: "";
+                      position: absolute;
+                      bottom: 45%;
+                      left: 5px;
+                      width: 0;
+                      height: 0;
+                      border-top: 400px solid transparent;
+                      border-left: 550px solid #ffd90071;
+                      border-bottom: 340px solid transparent;
+                      border-right: 92px solid transparent;
                     }
                     // &::after{
                     //     content: '';
@@ -298,7 +230,128 @@
                     //     border-right: 130px solid transparent;
                     //     border-bottom: 307px solid #ffd90071;
                     // }
+                  }
                 }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #wayOfWorking {
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    background-color: #ffd900;
+
+    .mainWarper {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 0;
+
+      .static_content {
+        width: 100%;
+        order: 1;
+        .text_content {
+          width: 100%;
+          padding: 80px 40px;
+          h1 {
+            font-size: 6vw;
+            line-height: 1;
+            text-transform: uppercase;
+            margin-bottom: 30px;
+          }
+          p {
+            font-size: 18px;
+          }
+        }
+      }
+
+      .dyanamic_component {
+        width: 100%;
+        padding: 10px 10px 0 0;
+
+        .blackBox {
+          width: 100%;
+          padding: 30px;
+          height: calc(100vh - 100px);
+          overflow: hidden;
+          .hexagon {
+            width: 363px;
+            height: calc(363px * 647 / 563);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            clip-path: polygon(
+              50% 0,
+              100% 25%,
+              100% 75%,
+              50% 100%,
+              0 75%,
+              0 25%
+            );
+            background-color: #ffd90028;
+            overflow: hidden;
+            .mid_ball {
+              width: 100px;
+              height: 100px;
+              border: 1px solid #ffd90060;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              border-radius: 50%;
+              background-color: #000000;
+              background-image: conic-gradient(
+                #ffd900 0deg 10deg,
+                #ffd90000 10deg 360deg
+              );
+              position: relative;
+              &::before {
+                position: absolute;
+                content: "";
+                width: calc(100% - 2px);
+                height: calc(100% - 2px);
+                background-color: #000000;
+                border-radius: 50%;
+              }
+              .middle {
+                width: 10px;
+                height: 10px;
+                background-color: #ffd900;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 50%;
+                position: relative;
+                &::before {
+                  content: "";
+                  position: absolute;
+                  bottom: 45%;
+                  left: 5px;
+                  width: 0;
+                  height: 0;
+                  border-top: 400px solid transparent;
+                  border-left: 550px solid #ffd90071;
+                  border-bottom: 340px solid transparent;
+                  border-right: 92px solid transparent;
+                }
+                // &::after{
+                //     content: '';
+                //     position: absolute;
+                //     top: -300px;
+                //     left: 0;
+                //     width: 0;
+                //     height: 0;
+                //     border-left: 400px solid transparent;
+                //     border-right: 130px solid transparent;
+                //     border-bottom: 307px solid #ffd90071;
+                // }
+              }
             }
           }
         }
