--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@
   width: 100%;
   padding: 0;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.63);
+  background-color: rgb(0, 0, 0);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -144,7 +144,7 @@
   align-items: center;
   justify-content: center;
   clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
-  background: rgba(255, 217, 0, 0.2274509804);
+  background: rgba(255, 217, 0, 0.0745098039);
   background-image: conic-gradient(#ffd900 0deg 1deg, #000000 10deg 360deg);
   position: relative;
   z-index: 1;
