--- a/style.scss
+++ b/style.scss
@@ -88,7 +88,7 @@
         width: 100%;
         padding: 0;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.63);
+        background-color: rgb(0, 0, 0);
         display: flex;
         align-items: center;
         justify-content: center;
@@ -147,7 +147,7 @@
               0 75%,
               0 25%
             );
-            background: #ffd9003a;
+            background: #ffd90013;
             background-image: conic-gradient(
               #ffd900 0deg 1deg,
               #000000 10deg 360deg
